tests/paczka1/fuzzy1/73200889.err
Error in line 10: 3kVTN S974 8,5
Error in line 9: S974 A250 27,8
